Add Code for Regularization Api

--- a/KekaActionService/src/main/resources/application.yml
+++ b/KekaActionService/src/main/resources/application.yml
@@ -4,12 +4,12 @@ spring:
   application:
     name: KekeActionService
   datasource:
-    username: keka_clone
+    username: keka
     password: sarasu10
     driver-class-name: oracle.jdbc.driver.OracleDriver
-    url: jdbc:oracle:thin:@192.168.3.30:1521:xe
+    url: jdbc:oracle:thin:@localhost:1522:xe
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
