--- a/security_service/src/main/resources/application.yaml
+++ b/security_service/src/main/resources/application.yaml
@@ -14,6 +14,12 @@ spring:
       ddl-auto: update
     show-sql: true
 
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+
+
 logging:
   file:
     name: logs/app.log
