--- a/KekaActionService/pom.xml
+++ b/KekaActionService/pom.xml
@@ -72,6 +72,12 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.8.13</version>
+        </dependency>
+
     </dependencies>
 
 
