--- a/KekaActionService/src/main/resources/application.yml
+++ b/KekaActionService/src/main/resources/application.yml
@@ -5,10 +5,10 @@ spring:
   application:
     name: KekeActionService
   datasource:
-    username: keka
-    password: sarasu10
+    username: ${ORACLE_DB_USER}
+    password: ${ORACLE_DB_PASSWORD}
     driver-class-name: oracle.jdbc.driver.OracleDriver
-    url: jdbc:oracle:thin:@localhost:1522:xe
+    url: jdbc:oracle:thin:@localhost:1521:xe
 
   mail:
     username: ${EMAIL}
