--- a/security_service/src/main/resources/application.yaml
+++ b/security_service/src/main/resources/application.yaml
@@ -20,9 +20,9 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
 
 
-logging:
-  file:
-    name: logs/app.log
+#logging:
+#  file:
+#    name: logs/app.log
 
   level:
     org:
