--- a/KekaActionService/src/main/resources/application.yml
+++ b/KekaActionService/src/main/resources/application.yml
@@ -10,6 +10,12 @@ spring:
     driver-class-name: oracle.jdbc.driver.OracleDriver
     url: jdbc:oracle:thin:@localhost:1521:xe
 
+
+  jpa:
+    hibernate:
+      ddl-auto: none #update
+    show-sql: true
+
   mail:
     username: ${EMAIL}
     password: ${APP_PASSWORD}
@@ -29,8 +35,3 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka/
 
-
-  jpa:
-    hibernate:
-      ddl-auto: create
-    show-sql: true
