--- a/query_service/src/main/resources/application.yml
+++ b/query_service/src/main/resources/application.yml
@@ -6,10 +6,10 @@ spring:
     name: query_service
 
   datasource:
-    url: jdbc:oracle:thin:@localhost:1521:xe
-    username: eidiko
-    password: sarasu10
+    username: ${ORACLE_DB_USER}
+    password: ${ORACLE_DB_PASSWORD}
     driver-class-name: oracle.jdbc.OracleDriver
+    url: ${ORACLE_DB_URL}
 
   jpa:
     hibernate:
