--- a/KekaActionService/src/main/resources/application.yml
+++ b/KekaActionService/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create #update
+      ddl-auto: none #create #update
     show-sql: true
 
   mail:
