--- a/query_service/src/main/resources/application.yml
+++ b/query_service/src/main/resources/application.yml
@@ -4,14 +4,34 @@ server:
 spring:
   application:
     name: query_service
-
   datasource:
-    url: jdbc:oracle:thin:@localhost:1521:xe
-    username: eidiko
-    password: sarasu10
+    username: ${ORACLE_DB_USER}
+    password: ${ORACLE_DB_PASSWORD}
     driver-class-name: oracle.jdbc.OracleDriver
+    url: ${ORACLE_DB_URL}
+
 
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     show-sql: true
+
+  mail:
+    username: ${EMAIL}
+    password: ${APP_PASSWORD}
+    host: smtp.gmail.com
+    port: 587
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+            required: true
+
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+
