--- a/KekaActionService/src/main/resources/application.yml
+++ b/KekaActionService/src/main/resources/application.yml
@@ -34,11 +34,11 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
-
-logging:
-  file:
-    name: logs/app.log
-  level:
-    root: INFO
-  pattern:
-    file: "%d{yyyy-MM-dd HH:mm:ss} | %level | %logger{36} | %msg%n"
+#
+#logging:
+#  file:
+#    name: logs/app.log
+#  level:
+#    root: INFO
+#  pattern:
+#    file: "%d{yyyy-MM-dd HH:mm:ss} | %level | %logger{36} | %msg%n"
